fix to google ads